sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:19: error: not found: value setValur
    setValur(v,r)
    ^