sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort()
{
  var v:Int = 0
  var r:Int = 0
  
  for(i <- 1 to getNombreValeurs()-1)
  {
    v = getValeur(i)
    
    for(j <- i to 1 by -1)
    {
      if(plusPetitQue(j-1,v))
      {
        copie(j-1,j)
        r=j-1
      }
    }
    setValur(v,r)
  }
}